apps/juxtaposition-ui/webfiles/ctr/css/juxt.css
@import 'sprites.css';
@import './controls/ctabs.css';
@import './controls/checkbox.css';
@import './components/ui/CtrNavTabs.css';
@import 'new-post-view.css';
@import 'report-post-page.css';

body {
    margin: 0;
    font-family: nintendo_NTLG-DB_001,sans-serif;
    width: 400px;
    background: #00f
}

#body,
#header,
body {
    overflow-x: clip
}

#body {
    background-image: url(@/images/background.png);
    background-repeat: repeat;
    padding-bottom: 28px; /* Toolbar location */
}

a {
    text-decoration: none
}

li,
menu,
ol,
ul {
    list-style: none
}

h1,
h2,
h3,
h4,
h5,
h6,
li,
menu,
ol,
p,
table,
td,
th,
tr,
ul {
    font-size: 100%;
    font-weight: 400;
    margin: 0;
    padding: 0
}

#header {
    display: block;
    width: 400px;
    height: 220px;
    background: url(@/images/header.png);
    background-size: 400px;
    position: relative;
    margin-bottom: 10px;

    &.buttons {
        margin-bottom: 40px;
    }
}

#page-title {
    position: absolute;
    bottom: 0;
    height: 52px;
    line-height: 47px;
    font-size: 25px;
    white-space: nowrap;
    display: inline;
    padding-left: 15px;
    width: 385px
}

/* Communities with old style headers where we need to cover the bottom 52px */
.header-legacy #page-title {
    background: #fff;
}

#header > a {
    position: absolute;
    margin: 0;
    bottom: -31px;
    height: 13px;
    line-height: 13px;
    font-size: 13px;
    padding: 8px;
    background: -webkit-gradient(linear, left top, left bottom, from(#fff), color-stop(.5, #fff), to(#e6e6e6)) 0 0;
    color: #323232;
    border: 1px solid #cecece
}

#header a.right {
    right: 0;
    padding-right: 45px;
    border-bottom-left-radius: 10px
}

#header a.left {
    left: 0;
    padding-left: 45px;
    border-bottom-right-radius: 10px
}

.headline > h2 {
    font-size: 18px;
    padding: 0 10px
}

#body > .body-content {
    width: 322px;
    margin-left: 39px;
    min-height: 175px
}

.headline,
menu.tab-header {
    white-space: nowrap;
    width: 300px
}

.headline {
    line-height: 2;
    color: #fff;
    background: url(@/images/headline.png) 0 0 no-repeat;
    margin: 6px 10px;
    background-size: 100% !important
}

.headline.headline-green {
    background: url(@/images/headline-green.png) 0 0 no-repeat;
    border-color: #59c9a5
}

.icon-container > .icon {
    width: 64px;
    height: 64px;
    background: #e6eaf1
}

.list-content-with-icon-column > li {
    display: table;
    width: 300px;
    border-bottom: 3px dotted #d2b0e1;
    margin: 6px 10px
}

.icon-container {
    display: table-cell;
    width: 60px;
    height: 60px
}

.list-content-with-icon-column .body {
    display: table-cell;
    text-align: left;
    vertical-align: middle;
    padding-left: 10px
}

.list-content-with-icon-column .body-content .text {
    color: #969696;
    font-size: 12px;
    position: relative;
    top: -5px;
    left: 0
}

.scroll.to-community-button {
    display: block
}

.community-name.title {
    font-size: 15px;
    color: #323232
}

#page-title .icon-container {
    position: absolute;
    bottom: 6px;
    left: 10px;
    width: 40px;
    height: 40px
}

#page-title .icon-container > .icon {
    width: 40px;
    height: 40px
}

#page-title .community-name {
    margin-left: 55px;
    font-size: 15px;
    white-space: normal;
    line-height: 20px;
    vertical-align: middle;
    display: inline-block;
    max-width: 230px
}

#page-title.community {
    padding-left: 0;
    width: 400px
}

.text {
    font-size: 16px;
    position: absolute;
    right: 10px;
    top: 2px;
}
.text > span > span {
    vertical-align: middle;
}

menu.tab-header {
    display: inline-block;
    text-align: center;
    padding: 5px 0;
    margin-top: 30px;
    margin-left: 10px;
    border: 1px solid #5e44aa;
    background: -webkit-gradient(linear, left top, left bottom, from(#6045af), to(#634ca8)) 0 0 !important;
    border-radius: 2px
}

menu.tab-header li {
    display: inline-block;
    width: 144px;
    background: url(@/images/tab.png);
}

menu.tab-header li:first-child {
    margin-left: 7px;
    margin-right: -5px
}

menu.tab-header li:last-child {
    margin-left: 0;
    margin-right: 7px
}

menu.tab-header a {
    color: #cabbf3;
    width: 145px
}

menu.tab-header li.selected a {
    display: inline-block;
    background: -webkit-gradient(linear, left top, left bottom, from(#fff), color-stop(.3, #fff), color-stop(.8, #fff5f5), color-stop(.96, #fff5f5), to(#fff5f5)) 0 0;
    color: #4d4d4d
}

menu.tab-header.user-page a,
menu.tab-header.user-page li {
    width: 97px;
    margin: -4px
}

menu.tab-header.user-page li:first-child {
    margin-left: 6px
}

menu.tab-header.user-page li.double,
menu.tab-header.user-page li.double > a {
    width: 146px
}

menu.tab-header.user-page li.double {
    margin-top: 5px
}

menu.tab-header.user-page li:last-child {
    margin-left: -5px
}

#mii-face,
.mii-icon-container img {
    width: 35px;
    height: 35px;
    background: #fff
}

.mii-icon-container {
    display: block;
    height: 35px;
    position: relative;
    float: left;
    border: 1px solid gray;
    margin: 5px 10px 0 5px
}

.post {
    background: #fff;
    margin-bottom: 10px;
    border-radius: 5px;
    border: 1px solid #666
}

.post-memo,
.post-screenshot {
    width: 320px
}

.post-memo {
    height: 120px
}

.post-screenshot {
    height: 178px;
}

.post-screenshot-16\3A 9 {
    height: 180px;
}

.post-screenshot-5\3A 3 {
    height: 192px;
}

.post-screenshot-4\3A 3 {
    height: 240px;
}

.post-list .post .timestamp {
    color: #969696
}

.tab-body.post-list {
    margin-top: 10px;
}

.post header > a,
.tags,
header svg {
    display: inline-block;
    position: absolute
}

.post header > a {
    width: 258px;
    vertical-align: middle;
    overflow: clip;
    left: 0;
    top: 17px
}

.tags,
header svg {
    color: #a362d8;
    font-size: 10px;
    line-height: 12px;
    margin-top: 1px;
    margin-left: 0
}
/* ... */

